welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value R
if (litMessage()==R) {droite();avance()}
                  ^BDRBuggle:3: error: not found: value L
	else if (litMessage()==L) {gauche();avance()}
                               ^BDRBuggle:4: error: not found: value I
	else if (litMessage()==I) {retourne();avance()}	
                               ^BDRBuggle:5: error: not found: value A
  else if (litMessage()==A) {avance()}
                         ^BDRBuggle:6: error: not found: value B
	else if (litMessage()==B) {avance(2)}
                               ^BDRBuggle:7: error: not found: value C
	else if (litMessage()==C) {avance(3)}
                               ^BDRBuggle:8: error: not found: value Z
	else if (litMessage()==Z) {recule()}
                               ^BDRBuggle:9: error: not found: value Y
	else if (litMessage()==Y) {recule(2)}
                               ^BDRBuggle:10: error: not found: value X
	else if (litMessage()==X) {recule(3)}
                               ^